--- a/src/index.html
+++ b/src/index.html
@@ -9,17 +9,20 @@
   <link rel="icon" type="image/x-icon" href="assets/Images/favicon.png">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148185567-1"></script>
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-148185567-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
   </script>
 
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 
 <body>
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
 </html>
